2019-03-22 Magnus Hgadorn
 * piccolo3/client/__init__.py: make it a package

2019-03-22 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: make interface async
 * piccolo3/client/PiccoloSpectrometer.py: ditto
 * piccolo3/client/PiccoloSysinfo.py: ditto

2019-03-22 Magnus Hagdorn 
 * piccolo3/client/PiccoloBaseClient.py: add async method to observe a
   resource
 * piccolo3/client/PiccoloDataDir.py: add classes to handle data directory

2019-03-21 Magnus Hagdorn
 * piccolo3/client/PiccoloSysinfo.py: wrap sysinfo class

2019-03-21 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add client object to handle piccolo

2019-03-07 Magnus Hagdorn
 * start piccolo3 client using aiocoap