@@ -18,7 +18,7 @@
 from pkg_resources import get_distribution, DistributionNotFound
 
 try:
-    __version__ = get_distribution('piccolo3-server').version
+    __version__ = get_distribution('piccolo3-client').version
 except DistributionNotFound:
     # package is not installed
     pass
